[gd_scene load_steps=8 format=3 uid="uid://b74ylqso7ojj7"]

[ext_resource type="Script" path="res://Level/City1/CityView.gd" id="1_f3hw4"]
[ext_resource type="Script" path="res://Level/City1/EventHandling.gd" id="1_fudwe"]
[ext_resource type="PackedScene" uid="uid://g08j201c8bkc" path="res://Characters/MainChar/MainChar.tscn" id="1_o3vqu"]
[ext_resource type="PackedScene" uid="uid://dyhqixveqob5h" path="res://Buildings/House1/House1.tscn" id="2_o0xxj"]
[ext_resource type="Script" path="res://Level/City1/backToMenu.gd" id="4_gscx6"]
[ext_resource type="PackedScene" uid="uid://ndjgyfvjtgv0" path="res://Characters/NPC/NPC.tscn" id="6_1rj0r"]

[sub_resource type="CircleShape2D" id="CircleShape2D_uh1ys"]

[node name="CityView" type="Node2D"]
script = ExtResource("1_f3hw4")

[node name="MainChar" parent="." instance=ExtResource("1_o3vqu")]
position = Vector2(-278, -67)

[node name="EventHandling" type="Node" parent="."]
script = ExtResource("1_fudwe")

[node name="Buildings" type="Node" parent="."]

[node name="House1" parent="Buildings" instance=ExtResource("2_o0xxj")]
position = Vector2(-26, -19)

[node name="playerViewCam" type="Camera2D" parent="."]

[node name="Interface" type="Control" parent="playerViewCam"]
layout_mode = 3
anchors_preset = 0
offset_left = -576.0
offset_top = -324.0
offset_right = 576.0
offset_bottom = 324.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="backToMenu" type="Button" parent="playerViewCam/Interface"]
layout_mode = 1
offset_right = 8.0
offset_bottom = 8.0
text = "Back to menu"
script = ExtResource("4_gscx6")

[node name="Npc" parent="." instance=ExtResource("6_1rj0r")]
position = Vector2(-374, -167)

[node name="Npc2" parent="." instance=ExtResource("6_1rj0r")]
position = Vector2(-295, 131)

[node name="Npc3" parent="." instance=ExtResource("6_1rj0r")]
position = Vector2(-77, 142)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_uh1ys")
